Inizio sviluppo domanda di accreditamento provvisorio.
Implementata la sezione provider e sedi.

Manca la sezione Persone...forse da rivedere nelle Entity

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -35,6 +35,10 @@ body.nav-md .container.body .right_col.main{
 	font-size: 18px;
 }
 
+.control-label.left-align {
+    text-align: left;
+}
+
 @media (max-width: 991px) {
 	body.nav-md .container.body .right_col.main{
 	margin-left: 0;
