--- a/src/main/resources/templates/provider/showProvider.html
+++ b/src/main/resources/templates/provider/showProvider.html
@@ -18,8 +18,12 @@
 							<dd th:text="${provider.denominazioneLegale}" class="text-uppercase">denominazioneLegale</dd>
 							<dt th:text="#{label.tipo_organizzatore}"></dt>
 							<dd th:text="${provider.tipoOrganizzatore}" class="">tipoOrganizzatore</dd>
+							<dt th:text="#{label.gruppo}"></dt>
+							<dd th:text="${provider.gruppo}" class="">gruppo</dd>
+							<dt th:text="#{label.partita_iva}"></dt>
+							<dd th:text="${provider.partitaIva}" class="text-uppercase">partitaIva</dd>
 							<dt th:text="#{label.codice_fiscale}"></dt>
-							<dd th:text="${provider.cfPiva}" class="text-uppercase">cf_piva</dd>
+							<dd th:text="${provider.codiceFiscale}" class="text-uppercase">codiceFiscale</dd>
 							<dt th:text="#{label.email}"></dt>
 							<dd th:text="${provider.account.email}">email</dd>
 						</dl>
