--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 	              <div class="input-group">
 	              	<div class="checkbox">
 	                  <label>
-    	                  <input type="checkbox" name="rememberme" id="rememberme"/> <span th:text="#{label.ricordami}">label.ricordami</span>
+    	                  <input type="checkbox" name="remember-me" id="remember-me"/> <span th:text="#{label.ricordami}">label.ricordami</span>
         	          </label>
                   	</div>
                   </div>
@@ -57,7 +57,7 @@
 	      </div>
 	      <div id="reset" class="animate form">
 	        <section class="login_content">
-	          <form th:action="@{/reset}" method="post">
+	          <form th:action="@{/user/resetPassword}" method="post">
 	            <h1 th:text="#{label.recupera_password}">login.recupera_password</h1>
 	            <div th:text="#{label.reset_message}" class="alert alert-info"></div>   
 				<div class="item form-group">
