Fix delle DataTable responsive
ora viene gestito dalle classi .datatable-responsive per le table
semplici

e da .datatable-responsive-ordering per le table con paging e
ordinamento

--- a/src/main/resources/templates/provider/accreditamentoList.html
+++ b/src/main/resources/templates/provider/accreditamentoList.html
@@ -18,8 +18,8 @@
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
-						<table th:unless="${#lists.isEmpty(accreditamentoList)}" id="datatable-responsive"
-							class="table table-striped table-bordered dt-responsive nowrap"
+						<table th:unless="${#lists.isEmpty(accreditamentoList)}" id="datatable-accreditamento"
+							class="table table-striped table-bordered dt-responsive nowrap datatable-responsive"
 							cellspacing="0" width="100%">
 							<thead>
 								<tr>
