--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -111,7 +111,12 @@
 				"bInfo" : false,
 				"bPaginate" : false,
 				"ordering" : false
-				});
+			});
+			
+			$('.datatable-responsive-ordering').DataTable({
+				"bFilter" : false			
+			});
+			
 		</script>
 	</body>
 </html>
