--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
+        <dependent-module archiveName="springdatautil-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/it.tredi.springdatautil/it.tredi.springdatautil">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="ecm"/>
         <property name="java-output-path" value="/it.tredi.ecm/target/classes"/>
     </wb-module>
