--- a/src/main/resources/templates/provider/accreditamentoList.html
+++ b/src/main/resources/templates/provider/accreditamentoList.html
@@ -27,17 +27,17 @@
 									<th th:text="#{label.accreditamento_stato}">Stato</th>
 									<th th:text="#{label.accreditamento_invio}">Data invio</th>
 									<th th:text="#{label.accreditamento_validazione}">Datavalidazione</th>
-									<th th:text="#{label.accreditamento_mesi_validita}">Validità (mesi)</th>
+									<th th:text="#{label.accreditamento_scadenza}">Scadenza</th>
 								</tr>
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
 								<tr th:each="accreditamento : ${accreditamentoList}">
-									<th th:text="${accreditamento.tipoDomanda}"
-										th:href="@{|/provider/accreditamento/${accreditamento.id}|}">Provvisorio/Standard</th>
+									<th><a th:text="${accreditamento.tipoDomanda}"
+										th:href="@{|/provider/accreditamento/${accreditamento.id}|}">Provvisorio/Standard</a></th>
 									<th th:text="${accreditamento.stato}">Accettata</th>
 									<th th:text="${accreditamento.dataInvio}">22/05/2014</th>
 									<th th:text="${accreditamento.dataValutazione}">24/05/2014</th>
-									<th th:text="${accreditamento.mesiValidita}">24</th>
+									<th th:text="${accreditamento.dataScadenza}">24/05/2016</th>
 								</tr>
 							</tbody>
 						</table>
