Inserito nel footer lo script di gestione dei messaggi
(il pNotify)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -117,6 +117,18 @@
 				"bFilter" : false			
 			});
 			
+		
+			function sendNotify(){
+				var notify = new PNotify({
+					title: [[${message?.titolo}]],
+					text: [[${message?.testo}]],
+					type: [[${message?.tipo}]],
+					hide: false,
+                    buttons: {
+                    	sticker: false
+                    }                             
+            	});
+			};		
 		</script>
 	</body>
 </html>
