--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-	layout:decorator="fragments/template">
-<head lang="it">
+<html layout:decorator="fragments/template" xmlns:th="http://www.thymeleaf.org">
+<head>
 </head>
 <body>
+
 	<div layout:fragment="content">
 		<div class="row">
-			<div class="col-xs-12">
-				<div class="x_panel">
-					<div class="x_title">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="dashboard_graph">
 
-						<!-- ARRIVERÀ UN BEAN -->
+                            <div class="row x_title">
+                                <div class="col-md-6">
+                                    <h3>Home Page</h3>
+                                </div>
+                            </div>
 
-						<h2>Prova dei pNotify</h2>
-						<div class="clearfix"></div>
-					</div>
-					<div class="x_content">
-						<div class="col-md-9 col-sm-9 col-xs-12">
-							<button class="btn btn-primary source " onclick="new PNotify({
-	                                title: 'Sticky Success',
-	                                text: 'Sticky success... I\'m not even gonna make a joke.',
-	                                type: 'success',
-	                                hide: false,
-	                                buttons: {
-	                                	sticker: false
-	                                }                             
-                            	});">Button con la X</button>
-						</div>
-					</div>
-					<div th:text="${param}">
-						
-					</div>
-				</div>
-			</div>
-		</div>
-		<script th:inline="javascript">
-			var notify = new PNotify({
-				title: 
-			})
-		
-		</script>
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                            	<a th:href="@{/provider/edit}">Registra nuovo provider</a>
+                            </div>
+
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+
+                </div>
+           <br />
 	</div>
+
 </body>
 </html>
